restyle, disabled bg change of course form - avoid flicker on win10

--- a/wui/style.css
+++ b/wui/style.css
@@ -1,4 +1,4 @@
-body {-webkit-user-select: none;  background:#3c3c3c; margin:4 4 4 4; font-family: 'Microsoft YaHei';}
+body {-webkit-user-select: none;  background:#3c3c3c; margin:0 0 0 0; font-family: 'Microsoft YaHei';}
 .box {border: 0px solid red; }
 .container { overflow-y: none;}
 
@@ -10,7 +10,7 @@ body {-webkit-user-select: none;  background:#3c3c3c; margin:4 4 4 4; font-famil
 .ocean1 { background:radial-gradient(ellipse at center, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 1%, #15b5db 90%);}
 .ocean2 { background:radial-gradient(ellipse at center, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 8%, #35b5db 95%);}
 
-.selection .navigate .course-list {float:left; width:200px; height: 86%; margin-top:30px; margin-left:20px; box-shadow: 7px 7px 3px #453e3e;background-color: #f2f2f2;}
+.selection .navigate .course-list {float:left; width:200px; height: 100%; margin-top:0px; margin-left:0px;background-color: #f2f2f2;}
 .selection .navigate .course-list ul {list-style-type: none; margin: 0px; padding: 0px; }
 .selection .navigate .course-list ul li { font-size: 16px; line-height: 60px; height: 60px; text-align: center; }
 .selection .navigate .course-list ul li:hover  {background-color: #becdd1;}
@@ -21,7 +21,7 @@ body {-webkit-user-select: none;  background:#3c3c3c; margin:4 4 4 4; font-famil
 .course-selected {border: 2px solid #000; background-color: #15b5db !important;}
 
 .selection .navigate .details {float:left; width:410px;  height: 100%; }
-.selection .navigate  .details  .desc {width:100%; height: 90%; margin: 25 5 5 5; overflow:hidden;}
+.selection .navigate  .details  .desc {width:100%; height: 90%; margin: 25 5 5 5; overflow:hidden;  box-shadow: 7px 7px 3px #453e3e;}
 .selection .navigate  .details  .desc  div {font-size: 15px; width:98%; background-color:#05b5db; padding:5 5 5 5;}
 .selection .navigate  .details  .desc  div:hover {background-color:#474545; color:#eae4df}
 .selection  .navigate .details  .desc  div a {display:inline-block; padding:2 6 2 6;height: 26px; text-decoration: none; color:eae4df;border: 2px solid #eae4df;}
